---
title: Estructura de Datos - API FUMBBL
---
classDiagram
    direction LR

    class Team {
        +int id
        +String name
        +int teamValue
        +int currentValue
        +int treasury
        +int fanFactor
        +int rerolls
        +String apothecary
        +Coach coach
        +Roster roster
        +Record record
        +List~Player~ players
    }

    class Coach {
        +int id
        +String name
    }

    class Roster {
        +int id
        +String name
    }

    class Record {
        +int games
        +int wins
        +int ties
        +int losses
    }

    class Player {
        +int id
        +int number
        +String name
        +String position
        +int positionId
        +String injuries
        +List~String~ skills
        +PlayerRecord record
        +int teamId
    }

    class PlayerRecord {
        +int games
        +int completions
        +int touchdowns
        +int casualties
        +int mvps
        +int ssp
    }

    Team "1" --> "1" Coach : coach
    Team "1" --> "1" Roster : roster
    Team "1" --> "1" Record : record
    Team "1" --> "0..*" Player : players
    Player "1" --> "1" PlayerRecord : record
